Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-10218

rpl.rpl_binlog_errors fails in buildbot with valgrind warnings - bytes are possibly lost

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 5.5(EOL)
    • 5.5.50
    • Tests, MTR
    • None

    Description

      http://buildbot.askmonty.org/buildbot/builders/work-amd64-valgrind/builds/8913/steps/test/logs/stdio

      rpl.rpl_binlog_errors 'mix,xtradb'       w5 [ fail ]  Found warnings/errors in server log file!
              Test ended at 2016-06-11 11:17:42
      line
      ==2417== 288 bytes in 1 blocks are possibly lost in loss record 2 of 3
      ==2417==    at 0x4C25553: calloc (vg_replace_malloc.c:711)
      ==2417==    by 0x4010AEE: _dl_allocate_tls (in /lib64/ld-2.9.so)
      ==2417==    by 0x4E3774A: pthread_create@@GLIBC_2.2.5 (in /lib64/libpthread-2.9.so)
      ==2417==    by 0xA1B92B: spawn_thread_v1 (pfs.cc:1038)
      ==2417==    by 0x53F42C: inline_mysql_thread_create (mysql_thread.h:1061)
      ==2417==    by 0x53F42C: start_slave_thread(unsigned int, void* (*)(void*), st_mysql_mutex*, st_mysql_mutex*, st_mysql_cond*, unsigned int volatile*, unsigned long volatile*, Master_info*) (slave.cc:738)
      ==2417==    by 0x53F7CD: start_slave_threads(bool, bool, Master_info*, char const*, char const*, int) (slave.cc:818)
      ==2417==    by 0x5EA23B: start_slave(THD*, Master_info*, bool) (sql_repl.cc:1345)
      ==2417==    by 0x5CB76D: mysql_execute_command(THD*) (sql_parse.cc:2698)
      ==2417==    by 0x5CFBB4: mysql_parse(THD*, char*, unsigned int, Parser_state*) (sql_parse.cc:5934)
      ==2417==    by 0x5D22F9: dispatch_command(enum_server_command, THD*, char*, unsigned int) (sql_parse.cc:1079)
      ==2417==    by 0x5D2BC6: do_command(THD*) (sql_parse.cc:793)
      ==2417==    by 0x6AD6D3: do_handle_one_connection(THD*) (sql_connect.cc:1270)
      ==2417==    by 0x6AD7D3: handle_one_connection (sql_connect.cc:1186)
      ==2417==    by 0xA1B9B7: pfs_spawn_thread (pfs.cc:1015)
      ==2417==    by 0x4E3806F: start_thread (in /lib64/libpthread-2.9.so)
      ==2417==    by 0x62FC13C: clone (in /lib64/libc-2.9.so)
      

      The failure started happening in buildbot after this change:
      https://github.com/MariaDB/server/commit/87007dc2f71634cc460271eb277ad851ec69c04b

      Possibly the valgrind suppression was removed erroneously.

      Attachments

        Issue Links

          Activity

            People

              svoj Sergey Vojtovich
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.