MDEV-10218 - rpl.rpl_binlog_errors fails in buildbot with valgrind warnings -              bytes are possibly lost

Timer thread of threadpool is created "joinable", but they're not "joined" on
completion. This causes memory leaks around thread local storage.

Fixed by joining timer thread.